# audiodecoder.timidity

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.timidity/: addon.xml  addon.xml.in
audiodecoder.timidity/resources/: settings.xml
audiodecoder.timidity/resources/language/English/: strings.po
audiodecoder.timidity/resources/language/resource.language.af_za/: strings.po
audiodecoder.timidity/resources/language/resource.language.am_et/: strings.po
audiodecoder.timidity/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.timidity/resources/language/resource.language.ast_es/: strings.po
audiodecoder.timidity/resources/language/resource.language.az_az/: strings.po
audiodecoder.timidity/resources/language/resource.language.be_by/: strings.po
audiodecoder.timidity/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.timidity/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.timidity/resources/language/resource.language.ca_es/: strings.po
audiodecoder.timidity/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.timidity/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.timidity/resources/language/resource.language.da_dk/: strings.po
audiodecoder.timidity/resources/language/resource.language.de_de/: strings.po
audiodecoder.timidity/resources/language/resource.language.el_gr/: strings.po
audiodecoder.timidity/resources/language/resource.language.en_au/: strings.po
audiodecoder.timidity/resources/language/resource.language.en_gb/: strings.po
audiodecoder.timidity/resources/language/resource.language.en_nz/: strings.po
audiodecoder.timidity/resources/language/resource.language.en_us/: strings.po
audiodecoder.timidity/resources/language/resource.language.eo/: strings.po
audiodecoder.timidity/resources/language/resource.language.es_ar/: strings.po
audiodecoder.timidity/resources/language/resource.language.es_es/: strings.po
audiodecoder.timidity/resources/language/resource.language.es_mx/: strings.po
audiodecoder.timidity/resources/language/resource.language.et_ee/: strings.po
audiodecoder.timidity/resources/language/resource.language.eu_es/: strings.po
audiodecoder.timidity/resources/language/resource.language.fa_af/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-timidity-note.txt
lib/kodi/tools/: DllHelper.h
lib/timidity/: CMakeLists.txt
lib/timidity/timidity/: aq.c  buffer_a.c  common.c  common.h  instrum.c  optcode.h  playmidi.c  readmidi.c  reverb.c  sdl_c.c  sndfont.c  timidity.c  timidity.h
src/: MidiScan.cpp  MidiScan.h  TimidityCodec.cpp  TimidityCodec.h
(+55 files in other folders)
